Added content layout to porttfolio component

--- a/scss/_colours.scss
+++ b/scss/_colours.scss
@@ -1,7 +1,7 @@
 $navBg: #0C0C0C;
 $siteBg: #181818;
 
-$accent1: #8B1EF7;
+$accent1: #5931F8;
 
 $gradient: linear-gradient(270deg, #8B1EF7, #5931FF);
 $gradientHover: linear-gradient(270deg, lighten(#8B1EF7, 5%), lighten(#5931FF, 5%));
