--- a/site/views/layout/main.liquid
+++ b/site/views/layout/main.liquid
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{ "/css/main.css" | relativeAsset }}" /> 
-    {% block head %} {% endblock %}
+    <link rel="stylesheet" href="{{
+      "/css/main.css" | relativeAsset
+    }}" /> {% block head %} {% endblock %}
   </head>
   <body>
-    <main>{% block mainContent %} {% endblock %}</main>
+    {% include '../components/navigation.liquid' %}
+    <main class="layout-main">{% block mainContent %} {% endblock %}</main>
   </body>
 </html>
