--- a/site/views/layout/main.liquid
+++ b/site/views/layout/main.liquid
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{
-      "/css/main.css" | relativeAsset
-    }}" /> {% block head %} {% endblock %}
+    <link rel="stylesheet" href="{{  "/css/main.css" | relativeAsset }}" /> {% block head %} {% endblock %}
+    <script>
+        window.addEventListener("DOMContentLoaded", function () { document.body.classList.remove('preload'); });
+    </script>
   </head>
-  <body>
+  <body class="preload">
     {% include '../components/navigation.liquid' %}
-    <main class="layout-main">{% block mainContent %} {% endblock %}</main>
+    <main class="layout-main">
+        {% block mainContent %} {% endblock %}
+    </main>
   </body>
+  <script src="{{ "/js/index.js" | relativeAsset }}" async></script> {% block scripts %} {% endblock %}
 </html>
