--- a/site/scss/main.scss
+++ b/site/scss/main.scss
@@ -27,4 +27,5 @@
 
 // ------------------------------------
 // Components
-@import "./components/navigation";
+@use "./components/navigation";
+@use "./components/section-header";
