--- a/site/views/components/footer.liquid
+++ b/site/views/components/footer.liquid
@@ -1,3 +1,3 @@
 <footer class="footer-root l--f l--f-j-c l--f-a-c l--bm-t-l">
-    Built using&nbsp;<a href="https://github.com/WillYallop/static-site-generator">@SSG</a>&nbsp;&&nbsp;<a href="https://github.com/WillYallop/functionalities"> @functionalities </a>!
+    Built using&nbsp;<a href="https://github.com/WillYallop/static-site-generator" target="_blank" rel="noreferrer">@SSG</a>&nbsp;&&nbsp;<a href="https://github.com/WillYallop/functionalities" target="_blank" rel="noreferrer"> @functionalities </a>!
 </footer>
