--- a/site/views/templates/projects.liquid
+++ b/site/views/templates/projects.liquid
@@ -6,5 +6,6 @@
 {% block mainContent %}
     <!-- Section Header -->
     {% include '../components/section-header.liquid', title: home.title, description: home.description %}
-
+    <!-- Projects -->
+    {% include '../components/projects-list.liquid' %}
 {% endblock %}
