--- a/site/scss/components/_footer.scss
+++ b/site/scss/components/_footer.scss
@@ -2,7 +2,7 @@
 
 .footer-root {
   margin-left: rem(300);
-  background-color: var(--bg-section-light);
+  background-color: var(--bg-section);
   height: rem(60);
 }
 
