--- a/site/scss/main.scss
+++ b/site/scss/main.scss
@@ -20,6 +20,7 @@
 @use "./base/reset";
 @use "./base/table";
 @use "./base/fonts";
+@use "./base/animations";
 
 // ------------------------------------
 // Layout
@@ -30,3 +31,4 @@
 @use "./components/navigation";
 @use "./components/section-header";
 @use "./components/footer";
+@use "./components/projects-list";
