--- a/site/scss/settings/_colours.scss
+++ b/site/scss/settings/_colours.scss
@@ -2,26 +2,25 @@
 // Background colours
 // ------------------------------------
 $colours: (
-  _error: red,
-  _success: green,
+  _error: #d33f49,
+  _success: #659b5e,
   _warning: orange,
   // background
-  _background: rgb(26, 26, 26),
-  _section: rgb(22, 22, 22),
-  _section-light: rgb(34, 34, 34),
+  _background: rgb(255, 255, 255),
+  _section: #ebeff2,
   // Typography
-  _title: rgb(255, 255, 255),
-  _text: rgb(221, 221, 221),
+  _title: rgb(15, 15, 15),
+  _text: rgb(32, 32, 32),
   // Accents
-  _primary: rgb(44, 26, 204),
-  _primary-light: rgb(77, 59, 243),
+  _primary: #b8dbe4,
+  _primary-light: rgb(26, 26, 26),
+  _secondary: #262730,
 );
 
 // Light mode
 :root {
   --bg: #{map-get($map: $colours, $key: _background)};
   --bg-section: #{map-get($map: $colours, $key: _section)};
-  --bg-section-light: #{map-get($map: $colours, $key: _section-light)};
 
   --error: #{map-get($colours, _error)};
   --success: #{map-get($colours, _success)};
@@ -32,4 +31,5 @@ $colours: (
 
   --primary: #{map-get($map: $colours, $key: _primary)};
   --primary-light: #{map-get($map: $colours, $key: _primary-light)};
+  --secondary: #{map-get($map: $colours, $key: _secondary)};
 }
