[]: updated project file structure and worked on single project template page with hero, markdown and gallery components

--- a/site/resources/scss/base/_core.scss
+++ b/site/resources/scss/base/_core.scss
@@ -25,3 +25,12 @@ body {
   white-space: nowrap;
   border: 0;
 }
+
+picture {
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+}
