--- a/site/resources/scss/main.scss
+++ b/site/resources/scss/main.scss
@@ -32,3 +32,5 @@
 @use "./components/section-header";
 @use "./components/footer";
 @use "./components/projects-list";
+@use "./components/project-hero";
+@use "./components/project-gallery";
