--- a/site/views/components/footer.liquid
+++ b/site/views/components/footer.liquid
@@ -1,3 +1,4 @@
+<span class="footer-root__spacer"></span>
 <footer class="footer-root l--f l--f-j-c l--f-a-c l--bm-t-l">
-    Built using&nbsp;<a href="https://github.com/WillYallop/static-site-generator" target="_blank" rel="noreferrer">@SSG</a>&nbsp;&&nbsp;<a href="https://github.com/WillYallop/functionalities" target="_blank" rel="noreferrer"> @functionalities </a>!
+    This site was built using&nbsp;<a href="https://github.com/WillYallop/static-site-generator" target="_blank" rel="noreferrer">@SSG</a>&nbsp;&&nbsp;<a href="https://github.com/WillYallop/functionalities" target="_blank" rel="noreferrer"> @functionalities</a>&nbsp;only!
 </footer>
