--- a/site/resources/scss/layout/_main.scss
+++ b/site/resources/scss/layout/_main.scss
@@ -2,6 +2,9 @@
 
 .layout-main {
   margin-left: rem(300);
+  background-color: var(--bg);
+  z-index: 2;
+  position: relative;
 }
 
 @include tablet {
