--- a/site/views/components/project-gallery.liquid
+++ b/site/views/components/project-gallery.liquid
@@ -1,13 +1,15 @@
-<section class="project-gallery-root">
-    <div class="l__wrapper l--sp-h l--sp-b">
-        <div class="project-gallery-root__wrapper">
-            <div class="project-gallery-root__gallery" data-gallery-container>
-                {% for image in project.data.images.gallery %}
-                    <div class="project-gallery-root__image" data-gallery-slide>
-                        {% include '../partials/picture.liquid', src: image.src, format: 'jpeg', size: 1200 %}
-                    </div>
-                {% endfor %}
+{% if project.data.images.gallery %}
+    <section class="project-gallery-root">
+        <div class="l__wrapperl--sp-b ">
+            <div class="project-gallery-root__wrapper ">
+                <ul class="project-gallery-root__gallery l--sp-t l--sp-b l--sp-h" data-gallery-container>
+                    {% for image in project.data.images.gallery %}
+                        <li class="project-gallery-root__image" data-gallery-slide>
+                            {% include '../partials/picture.liquid', src: image.src, format: 'jpeg', size: 1200, loading: 'lazy' %}
+                        </li>
+                    {% endfor %}
+                </ul>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+{% endif %}
