--- a/site/views/components/projects-list.liquid
+++ b/site/views/components/projects-list.liquid
@@ -51,7 +51,7 @@
                     <!-- inner -->
                     <div class="project-list-root__item__image__inner l__cover">
                         {% if project.images.thumbnail %} 
-                            {% include '../partials/picture.liquid', src: project.images.thumbnail, format: 'jpeg', size: 600 %}
+                            {% include '../partials/picture.liquid', src: project.images.thumbnail, format: 'jpeg', size: 600, loading: 'lazy' %}
                         {% endif %}
                     </div>
                 </div>
