--- a/site/resources/scss/base/_core.scss
+++ b/site/resources/scss/base/_core.scss
@@ -34,3 +34,24 @@ picture {
     display: block;
   }
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: rem(8);
+  height: rem(8);
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
