[projects]: wrote markdown and got images for the algorithm visuliser and cover maker projects

--- a/site/resources/scss/components/_project-hero.scss
+++ b/site/resources/scss/components/_project-hero.scss
@@ -4,6 +4,9 @@
   background-color: var(--bg-section);
   overflow: hidden;
   &__back {
+    position: sticky;
+    top: 0;
+    z-index: 10;
     width: 100%;
     height: rem(40);
     background-color: var(--bg-section-dark);
