--- a/site/resources/scss/components/_project-gallery.scss
+++ b/site/resources/scss/components/_project-gallery.scss
@@ -18,7 +18,7 @@
       overflow: hidden;
       height: 100%;
       img {
-        object-fit: contain;
+        object-fit: cover;
       }
     }
   }
