--- a/site/resources/scss/main.scss
+++ b/site/resources/scss/main.scss
@@ -34,3 +34,4 @@
 @use "./components/projects-list";
 @use "./components/project-hero";
 @use "./components/project-gallery";
+@use "./components/hljs";
