--- a/site/resources/scss/components/_projects-list.scss
+++ b/site/resources/scss/components/_projects-list.scss
@@ -108,6 +108,7 @@
       padding: rem(15);
       h2 {
         font-size: rem(18);
+        word-break: break-word;
       }
       p {
         margin-top: rem(5);
