--- a/site/views/components/navigation.liquid
+++ b/site/views/components/navigation.liquid
@@ -8,7 +8,7 @@
         </div>
         <div class="l--f l--f-d-c">
           <author class="t--b t--medium">William Yallop</author>
-          <span>Web Developer</span>
+          <span>Fullstack Developer</span>
         </div>
       </div>
       <!-- nav -->
