Removed preload class

--- a/site/views/layout/main.liquid
+++ b/site/views/layout/main.liquid
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website">
 
   </head>
-  <body class="preload" data-toggler-receiver="navigtion-sidebar">
+  <body  data-toggler-receiver="navigtion-sidebar">
     {% include '../components/navigation.liquid' %}
     <main class="layout-main" data-toggler-receiver="navigtion-sidebar">
         <div class="layout-main__inner">
