--- a/site/resources/scss/components/_section-header.scss
+++ b/site/resources/scss/components/_section-header.scss
@@ -3,6 +3,7 @@
 .section-header-root {
     h1 {
         word-break: break-word;
+        margin-bottom: rem(15);
     }
     p {
         max-width: rem(900);
