--- a/site/views/components/footer.liquid
+++ b/site/views/components/footer.liquid
@@ -2,4 +2,4 @@
 <footer class="footer-root l--f l--f-j-c l--f-a-c l--bm-t-l">
   <p>This site was built using&nbsp;<a href="https://github.com/WillYallop/static-site-generator" target="_blank" rel="noreferrer">@SSG</a>&nbsp;&&nbsp;<a href="https://github.com/WillYallop/functionalities" target="_blank" rel="noreferrer">
       @functionalities</a>&nbsp;only!</p>
-</footer>>
+</footer>
