--- a/site/resources/scss/components/_coming-soon.scss
+++ b/site/resources/scss/components/_coming-soon.scss
@@ -2,6 +2,7 @@
 
 .coming-soon {
   margin-top: 40px;
+  padding-bottom: rem(40);
   &__inner {
     background-color: var(--bg-section);
     border-radius: 10px;
