--- a/site/resources/scss/components/_hljs.scss
+++ b/site/resources/scss/components/_hljs.scss
@@ -1,3 +1,4 @@
+/* purgecss start ignore */
 pre {
   padding: 10px;
 }
@@ -95,3 +96,5 @@ code {
     font-weight: bold;
   }
 }
+
+/* purgecss end ignore */
