--- a/site/resources/scss/components/_project-hero.scss
+++ b/site/resources/scss/components/_project-hero.scss
@@ -20,6 +20,7 @@
   }
   &__top-bar {
     background-color: var(--bg-section);
+    padding-bottom: rem(20);
   }
   &__textarea {
     text-align: center;
