--- a/site/views/layout/main.liquid
+++ b/site/views/layout/main.liquid
@@ -9,6 +9,16 @@
     <meta name="robots" content="{{ seo.robots }}">
     <meta name="author" content="{{ seo.author }}">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="apple-mobile-web-app-title" content="William Yallop">
+    <meta name="application-name" content="William Yallop">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://williamyallop.com/static-images/card.jpg">
 
