Updated animations to trigger on load

--- a/src/components/blocks/ProjectsGrid.astro
+++ b/src/components/blocks/ProjectsGrid.astro
@@ -169,7 +169,7 @@ projects.forEach((project) => {
           >
             <animate-container
               animate="true"
-              on="visible"
+              on="load"
               reset="true"
               delay={index * 50}
               type="fade-in"
