--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import SocialLink from "../components/partials/SocialLink.astro";
     slot="info"
     class="typography py-10 md:py-0"
     animate="true"
-    on="visible"
+    on="load"
     reset="true"
     type="fade-in"
   >
