--- a/src/pages/project/[...slug].astro
+++ b/src/pages/project/[...slug].astro
@@ -65,7 +65,7 @@ const SCHEMA = JSON.stringify({
     slot="info"
     class="typography py-10 md:py-0 border-b border-b-background-secondary mb-2.5 md:mb-0 md:border-b-0 w-full"
     animate="true"
-    on="visible"
+    on="load"
     reset="true"
     type="fade-in"
   >
