--- a/src/components/blocks/ProjectsGrid.astro
+++ b/src/components/blocks/ProjectsGrid.astro
@@ -182,26 +182,39 @@ projects.forEach((project) => {
               delay={index * 50}
               type="fade-in"
             >
-              <AspectContainer ratio={"16:9"}>
-                <div class="project-card h-full bg-background-secondary hover:bg-accent rounded-lg duration-200">
-                  <span class="project-card__left" />
-                  <span class="project-card__bottom" />
-                  <a
-                    href={`/project/${project.slug}/`}
-                    class="project-card__img-bg bg-background-secondary h-full flex items-center justify-center rounded-lg overflow-hidden"
-                  >
-                    <Picture
-                      src={project.data.thumbnail}
-                      formats={["avif", "webp", "jpeg"]}
-                      aspectRatio={"16:9"}
-                      alt={project.data.title}
-                      widths={[600]}
-                      sizes={"(min-width: 1024px) 400px, 100vw"}
-                      class="object-cover w-full h-full"
-                    />
-                  </a>
-                </div>
-              </AspectContainer>
+              <figure class="relative">
+                <AspectContainer ratio={"16:9"}>
+                  <div class="project-card h-full bg-background-secondary hover:bg-accent rounded-lg duration-200">
+                    <span class="project-card__left" />
+                    <span class="project-card__bottom" />
+                    <a
+                      href={`/project/${project.slug}/`}
+                      class="project-card__img-bg bg-background-secondary h-full flex items-center justify-center rounded-lg overflow-hidden"
+                    >
+                      <Picture
+                        src={project.data.thumbnail}
+                        formats={["avif", "webp", "jpeg"]}
+                        aspectRatio={"16:9"}
+                        alt={project.data.title}
+                        widths={[600]}
+                        sizes={"(min-width: 1024px) 400px, 100vw"}
+                        class="object-cover w-full h-full block"
+                      />
+                    </a>
+                  </div>
+                </AspectContainer>
+
+                <figcaption class="absolute left-2.5 bottom-2.5 bg-background-secondary mt-0 z-10 px-2.5 py-1 rounded-md">
+                  <h3 class="text-typography !text-xs md:text-base font-bold">
+                    <a
+                      href={`/project/${project.slug}/`}
+                      class="hover:text-accent duration-200"
+                    >
+                      {project.data.title}
+                    </a>
+                  </h3>
+                </figcaption>
+              </figure>
             </animate-container>
           </li>
         ))
