--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,9 +37,8 @@ import SocialLink from "../components/partials/SocialLink.astro";
   >
     <h1>My Portfolio</h1>
     <p class="text-typography mt-5 max-w-xl">
-      Magna enim elit in eu adipisicing. Esse mollit nisi elit tempor sit.
-      Mollit in culpa pariatur enim quis consectetur. Nulla elit aliquip dolor
-      amet enim enim mollit. Laboris pariatur aute ipsum sit anim.
+      I'm Will Yallop - a fullstack web developer who strives to create snappy,
+      scalable, and accessible web experiences for everyone.
     </p>
     <ul class="flex mt-5">
       <li class="mr-2.5">
