Copy tweaks - removed some projects and added more

--- a/src/components/blocks/ProjectsGrid.astro
+++ b/src/components/blocks/ProjectsGrid.astro
@@ -204,7 +204,7 @@ projects.forEach((project) => {
                   </div>
                 </AspectContainer>
 
-                <figcaption class="absolute left-2.5 bottom-2.5 bg-background-secondary mt-0 z-10 px-2.5 py-1 rounded-md">
+                <figcaption class="absolute left-2.5 max-w-[calc(100%-20px)] bottom-2.5 bg-background-secondary mt-0 z-10 px-2.5 py-1 rounded-md">
                   <h3 class="text-typography !text-xs md:text-base font-bold">
                     <a
                       href={`/project/${project.slug}/`}
