--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,10 +35,12 @@ import SocialLink from "../components/partials/SocialLink.astro";
     reset="true"
     type="fade-in"
   >
-    <h1>My Portfolio</h1>
+    <h1 class="text-4xl">My Portfolio</h1>
     <p class="text-typography mt-5 max-w-xl">
-      I'm Will Yallop - a fullstack web developer who strives to create snappy,
-      scalable, and accessible web experiences for everyone.
+      I'm Will, a senior fullstack developer passionate about creating snappy,
+      scalable, and accessible web experiences for everyone. Currently working
+      on crafting a suite of powerful tools to help developers build the next
+      generation of websites.
     </p>
     <ul class="flex mt-5">
       <li class="mr-2.5">
