--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,7 +25,7 @@ const { type } = Astro.props;
       <span class="text-accent font-bold text-sm md:text-base"
         >William Yallop</span
       >
-      <span class="text-typography text-sm">Fullstack Developer</span>
+      <span class="text-typography text-sm">Senior Fullstack Developer</span>
     </div>
   </div>
 
